--- a/.travis.yml
+++ b/.travis.yml
@@ -78,9 +78,9 @@ before_install:
 
 install:
   - echo "install start"
-  - #ci/prep_cython_cache.sh
+  - ci/prep_cython_cache.sh
   - ci/setup_env.sh
-  - #ci/submit_cython_cache.sh
+  - travis_wait 20 ci/submit_cython_cache.sh
   - echo "install done"
 
 script:
