--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ install:
   - echo "install start"
   - ci/prep_cython_cache.sh
   - ci/setup_env.sh
-  - travis_wait 20 ci/submit_cython_cache.sh
+  - ci/submit_cython_cache.sh
   - echo "install done"
 
 script:
