--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,7 @@ script:
   - if [[ "${TRAVIS_CPU_ARCH}" == "arm64" ]]; then
       pip install pytz;
       pip install python-dateutil;
+      pip install hypothesis;
       sudo conda install pytest;
       pytest pandas;
     else
